Commtit: new change 23rd June.

--- a/wiki_book_topics/index.html
+++ b/wiki_book_topics/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Topics from wikibook</title>
 </head>
+
 <body>
     <h1>Wiki book</h1>
-    <script async src="./main.js"></script> // Used ASYNC for asynchronous script loading.
+    <script async src="./main.js"></script> <!--Used ASYNC for asynchronous script loading. -->
+    <h2>JS in XHTML</h2>
+    <h2>Event handlong</h2>
+    <div>
+        <a href="eventHandling.html"> Event Handling</a>
+        
+    </div>
+    <div>
+        <a href="variable_scope_etc.html"> Variable scope etc.</a>
+        
+    </div>
+    <script>
+        //<![CDATA[
+        alert("This alert created by JS from XHTML.");
+        //]]>
+    </script>
 </body>
+
 </html>
